<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/profile_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@drawable/default_profile"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/tv_profile_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/profile_user_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iv_profile_user_image"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/iv_profile_user_image"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_user_image" />

    <TextView
        android:id="@+id/tv_profile_my_pet_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/profile_my_pet_profile"
        app:layout_constraintEnd_toStartOf="@+id/tv_profile_community_post"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="@+id/view_profile"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_community_post" />

    <TextView
        android:id="@+id/tv_profile_community_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/profile_community_post"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_user_name" />

    <TextView
        android:id="@+id/tv_profile_pet_for_adoption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/profile_pet_for_adoption"
        app:layout_constraintEnd_toEndOf="@+id/view_profile"
        app:layout_constraintStart_toEndOf="@+id/tv_profile_community_post"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_community_post" />

    <View
        android:id="@+id/view_profile"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="70dp"
        android:layout_marginTop="32dp"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_user_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuestion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="@+id/view_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view_profile"
        app:layout_constraintTop_toBottomOf="@+id/view_profile"
        tools:listitem="@layout/record_question">


    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/add_question_fragment_label"
        app:backgroundTint="@color/blueFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>